--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,14 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "element-plus": "^2.3.6",
+    "puppeteer": "^20.7.4",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "xmldom": "^0.6.0",
+    "xpath": "^0.0.32"
   },
   "devDependencies": {
     "@iconify-json/ep": "^1.1.10",
