--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "chart.js": "^2.9.4",
     "cheerio": "^1.0.0-rc.12",
+    "echarts": "^5.4.2",
     "element-plus": "^2.3.6",
+    "phaser": "^3.60.0",
     "puppeteer": "^20.7.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2",
